<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.HotelFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/hotel_basics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/title"
                    style="@style/TitleText"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/photos_cv"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_height="257dp"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintTop_toBottomOf="@id/title">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/photos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/hotel_rating_cv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="#34FFA800"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/photos_cv">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#34FFA800"
                        android:orientation="horizontal"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/photos">

                        <ImageView
                            android:id="@+id/star_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:contentDescription="@string/star"
                            android:src="@drawable/star" />

                        <TextView
                            android:id="@+id/hotel_rating"
                            style="@style/HotelRatingText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/rating" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/hotel_name"
                    style="@style/TitleText"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hotel_rating_cv"
                    tools:text="Long Name" />

                <TextView
                    android:id="@+id/address"
                    style="@style/HotelAddressText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hotel_name"
                    tools:text="Yet Another Long Address" />

                <TextView
                    android:id="@+id/price"
                    style="@style/TitleText"
                    android:layout_marginTop="16dp"
                    android:text="@string/price"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address" />

                <TextView
                    android:id="@+id/price_description"
                    style="@style/BodyGreyText"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/price"
                    app:layout_constraintStart_toEndOf="@id/price"
                    app:layout_constraintTop_toTopOf="@id/price"
                    tools:text="за что-то там" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/hotel_basics">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/about_hotel"
                    style="@style/TitleText"
                    android:text="@string/about_hotel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/peculiarities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/about_hotel" />

                <TextView
                    android:id="@+id/description"
                    style="@style/BodyBlackText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/peculiarities"
                    tools:text="Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/facilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description">

                    <ImageView
                        android:id="@+id/facilities_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:importantForAccessibility="no"
                        android:src="@drawable/emoji_happy"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/facilities_tv"
                        style="@style/BodyBlackText"
                        android:layout_marginLeft="12dp"
                        android:text="@string/facilities"
                        app:layout_constraintStart_toEndOf="@id/facilities_iv"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/SupportGreyText"
                        android:text="@string/essentials"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/facilities_tv"
                        app:layout_constraintTop_toBottomOf="@id/facilities_tv" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/included"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/facilities">

                    <ImageView
                        android:id="@+id/included_iv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/tick_square"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/included_tv"
                        style="@style/BodyBlackText"
                        android:layout_marginLeft="12dp"
                        android:text="@string/included"
                        app:layout_constraintStart_toEndOf="@id/included_iv"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/SupportGreyText"
                        android:text="@string/essentials"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/included_tv"
                        app:layout_constraintTop_toBottomOf="@id/included_tv" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/not_included"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/included">

                    <ImageView
                        android:id="@+id/not_included_iv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/close_square"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/not_included_tv"
                        style="@style/BodyBlackText"
                        android:layout_marginLeft="12dp"
                        android:text="@string/not_included"
                        app:layout_constraintStart_toEndOf="@id/not_included_iv"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/SupportGreyText"
                        android:text="@string/essentials"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/not_included_tv"
                        app:layout_constraintTop_toBottomOf="@id/not_included_tv" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="28dp"
                    app:layout_constraintTop_toBottomOf="@id/not_included">

                    <Button
                        android:id="@+id/room_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/blue"
                        android:text="@string/choose_a_number"
                        android:textColor="@color/white"
                        app:layout_constraintTop_toBottomOf="@id/not_included" />

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>